[project]
name = "xion"
version = "0.1.0"
description = "Python SDK for XION - the Generalized Chain Abstraction Layer"
authors = [
    { name = "Francis Roch", email = "francis@manafont.net" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xion"]
