[project]
name = "xionpy"
version = "0.1.0"
description = "Python SDK for XION - the Generalized Chain Abstraction Layer"
authors = [
    { name = "Francis Roch", email = "francis@manafont.net" }
]
dependencies = [
    "pycryptodome>=3.20.0",
    "bech32>=1.2.0",
    "ecdsa>=0.19.0",
    "ruff>=0.6.1",
    "requests>=2.32.3",
    "pytest>=8.3.2",
    "grpcio>=1.65.5",
    "protobuf>=5.27.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["xionpy"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "protos",
]
