[project]
name = "xionpy"
version = "0.1.0"
description = "Python SDK for XION - the Generalized Chain Abstraction Layer"
authors = [
    { name = "Francis Roch", email = "francis@manafont.net" }
]
dependencies = [
    "bech32>=1.2.0",
    "ecdsa>=0.19.0",
    "requests>=2.32.3",
    "grpcio>=1.65.5",
    "protobuf>=5.27.3",
    "python-dateutil>=2.9.0.post0",
    "pycryptodome>=3.20.0",
    "backoff>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.1",
    "pytest>=8.3.2",
    "isort>=5.13.2",
    "bandit>=1.7.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["xionpy"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "protos",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
order_by_type = true
case_sensitive = true
lines_after_imports = 2
skip = [
    "xionpy/protos",
    ".venv",
]
skip_glob = "**/*_pb2.py"
known_first_party = "xionpy"
known_local_folder = "tests"
sections = ["FUTURE",'STDLIB',"THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
